@@ -19,4 +19,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 009 ==> PicasaWebExport   : 220433 : digiKam crash when has long time working on it.
 010 ==> PicasaWebExport   : 208426 : Exporting images fails with : "Could not connect to host xxxx.xxxx.xxxx.xxxx: Unknown error."
 011 ==> ExpoBlending      : 222297 : Overwriting on Windows and multiple saves fixes [patch].
-012 ==> 
+012 ==> PicasaWebExport   : 198045 : New albums don't appear in list
+013 ==>
